@@ -32,6 +32,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       We now always add the new connection to svr_conn.
   b - fix problem with mom segfault when using 8 or more gpus on mom node.
   e - Made it so localhost is no longer hard coded. The string comes from getnameinfo.
+  b - Fix so child pbs_mom does not remain running after qdel on slow starting job.
+      TRQ-860.
 
 4.0.0
   e - make a threadpool for TORQUE server. The number of threads is 
